Fixed issues with the CSS calls

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 
                 <span id="quickTaskDisplay">
                     <div style="width: 230px" class="small-margin inline job progress-bar progressBar">
-                        <div class="progress-fill progressFill" style="background-color:rgb(225, 165, 0)"></div>
+                        <div class="progress-fill progressFill current"></div>
                         <div class="progress-text name">Task</div>
                     </div>
                     <div class="sidebar-element" style="color: gray">Current job</div>
 
                     <div style="width: 230px" class="small-margin skill progress-bar progressBar">
-                        <div class="progress-fill progressFill" style="background-color:rgb(225, 165, 0)"></div>
+                        <div class="progress-fill progressFill current"></div>
                         <div class="progress-text name">Task</div>              
                     </div>
                     <div class="sidebar-element" style="color: gray">Current skill</div>
