--- a/index.html
+++ b/index.html
@@ -275,16 +275,14 @@
                             </form>
                         </li>
                         <li>
-                            <h2>Toggle light/dark mode</h2>
-                            <button class="w3-button button" onClick="setLightDarkMode()">Toggle</button>
+                            <h2>Change theme</h2>
+                            <span><select id="theme" onChange="setLightDarkMode(this.value)">
+ 										<option value="dark">Dark</option>
+  										<option value="light">Light</option>
+ 										</select>
+</span>
                         </li>
-                        <li>
-                            <h2>Join the discord community!</h2>
-                            <a href="https://discord.gg/fTRS4pHGka" target="_blank">
-                                <img src="https://cdn.icon-icons.com/icons2/2108/PNG/512/discord_icon_130958.png" width="100" height="100"></img>
-                            </a>
-                        </li>
-                        <li>
+                      <li>
                             <h2>Hard reset game</h2>
                             <button class="w3-button button w3-red" onClick="resetGameData()">Reset</button>
                         </li>
